# hatch-mojo

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
hatch_mojo/: __init__.py  artifacts.py  cleaning.py  compiler.py  config.py  hooks.py  planner.py  plugin.py  runtime.py  types.py
tests/: test_artifacts.py  test_cleaning.py  test_compiler.py  test_config.py  test_hooks.py  test_integration_compile.py  test_integration_wheel.py  test_planner.py  test_plugin.py  test_runtime.py
