[project]
name = "hatch-mojo"
version = "0.1.1"
description = "Hatch build hook for compiling Mojo sources into Python and native artifacts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cody Fincher", email = "cody@litestar.dev" }]
license = { text = "MIT" }
keywords = ["hatch", "hatchling", "mojo", "build", "plugin"]
classifiers = [ 
  "Framework :: Hatch",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["hatchling>=1.26.0", "packaging>=24.0"]

[project.urls]
Source = "https://github.com/cofin/hatch-mojo"
Issue = "https://github.com/cofin/hatch-mojo/issues"

[project.entry-points.hatch]
mojo = "hatch_mojo.hooks"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
build = ["bump-my-version"]
docs = [
  "sphinx>=8.0.0",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.0",
  "myst-parser",
  "shibuya",
]
lint = [
  "mypy>=1.13.0",
  "pyright>=1.1.386",
  "ruff>=0.7.1",
  "slotscheck>=0.16.5",
  "types-setuptools",
]
test = [
  "coverage>=7.6.1",
  "covdefaults",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-sugar>=1.0.0",
  "pytest-timeout>=2.3.1",
  "pytest-xdist>=3.6.1",
]
dev = [
  { include-group = "build" },
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
]

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["hatch_mojo"]

[tool.pytest.ini_options]
addopts = ["-q", "-ra", "--strict-config", "--strict-markers"]
markers = [
  "unit: unit tests",
  "integration: integration tests",
]
testpaths = ["tests"]
timeout = 120
timeout_method = "thread"

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true
plugins = ["covdefaults"]
relative_files = true
source = ["hatch_mojo"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
omit = ["*/tests/*"]
show_missing = true

[tool.ruff]
exclude = [".venv", "node_modules", "tmp", ".tmp"]
line-length = 120
src = ["hatch_mojo", "tests"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
extend-safe-fixes = ["TC"]
fixable = ["ALL"]
ignore = [
  "A003",
  "A005",
  "ANN401",
  "ARG001",
  "ARG002",
  "COM812",
  "CPY001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D202",
  "D205",
  "D415",
  "E501",
  "FA100",
  "FBT001",
  "FBT002",
  "FBT003",
  "ISC001",
  "PERF203",
  "PLR0913",
  "PLW2901",
  "PT",
  "TRY",
  "EM",
  "RUF012",
  "S101",
  "S603",
  "SLF001",
  "TC001",
  "TC003",
  "TD002",
  "TD003",
  "C901",
  "PLR0912",
]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["hatch_mojo", "tests"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*.*" = ["D", "S", "PLR", "ARG", "TRY", "ANN", "PT"]

[tool.mypy]
disallow_any_generics = false
disallow_untyped_decorators = true
implicit_reexport = false
packages = ["hatch_mojo", "tests"]
python_version = "3.10"
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = "attr-defined,no-untyped-def,misc"
warn_unused_ignores = false

[tool.pyright]
disableBytesTypePromotions = true
exclude = ["docs", "tmp", ".tmp", ".venv", "node_modules", "**/__pycache__","**/.*"]
include = ["hatch_mojo"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
venv = ".venv"
venvPath = "."

[tool.slotscheck]
strict-imports = false

[tool.codespell]
ignore-words-list = "te,fo"
skip = "uv.lock"
